syntax = "proto3";

package entity;

message Phone {
  int32 countryCode = 1;
  string areaCode = 2;
  string phoneNumber = 3;
  string isoCode = 4;
}

message RegisterEntityRequest {
  string domain = 1;
  string address = 2;
  string name = 3;
  string entityType = 4;
  string industryType = 5;
  string country = 6;
  string logo = 7; // Send as URL or base64
  string website = 8;
  string designation = 9;
  Phone phone = 10;
  string language = 11;
  bool agreement = 12;
  string userId = 13;
}

message RegisterEntityResponse {
  bool success = 1;
  string message = 2;
  string entityDomain = 3;
  string address = 4;
  string name = 5;
  string entityType = 6;
  string country = 7;
  string website = 8;
  string uploadedLogo = 9;
  string id = 10;
}

message GetEntityDetailsRequest {
  string id = 1;
}

message GetEntityDetailsResponse {
  string id = 1;
  string domain = 2;
  string address = 3;
  string name = 4;
  string entityType = 5;
  string industryType = 6;
  string country = 7;
  string logo = 8;
  string website = 9;
  string designation = 10;
  Phone phone = 11;
  string language = 12;
  bool agreement = 13;
  string createdAt = 14;
  string updatedAt = 15;
}

message EditEntityLogoRequest {
  string entityId = 1;
  string logo = 2;
}

message EditEntityLogoResponse {
  bool success = 1;
  string message = 2;
  string logo = 3;
}

message EditEntityProfileRequest {
  string name = 1;
  string entityId = 2;
}

message EditEntityProfileResponse {
  bool success = 1;
  string message = 2;
}

service EntityService {
  rpc GetEntityDetails(GetEntityDetailsRequest) returns (GetEntityDetailsResponse);
  rpc RegisterEntity(RegisterEntityRequest) returns (RegisterEntityResponse);
  rpc EditEntityLogo(EditEntityLogoRequest) returns (EditEntityLogoResponse);
  rpc EditEntityProfile(EditEntityProfileRequest) returns (EditEntityProfileResponse);
}
